--- a/Projet/index.html
+++ b/Projet/index.html
@@ -45,13 +45,13 @@
 		
 				<p>Vous pouvez voir mon CV <a href="pages/cv.html" target="_blank"> ici</a> ou en pdf:<a class="iconepdf" href="pdf/cvpdf.pdf" target="_blank" ><img src="img/pdf.png" alt="icone pdf" /></a></p>
 				<br>
-				<p>et me contacter <a href="pages/contact.html" target="_blank"> ici</a> ou par <a href="mailto:mel-dacosta@hotmail.fr">mail</a></p>
+				<p>et me contacter <a href="pages/contact.html" target="_blank"> ici</a> ou par <a href="mailto:melissa-dacosta@outlook.fr">mail</a></p>
 			</aside>
 <!-- ............................................................................................................................................................. -->					
 			<div class="accueil">  
 				<br>
 				<p>
-				Je suis Mélissa Da Costa élève en première année de DUT informatique à 
+				Je suis Mélissa Da Costa élève en deuxième année de DUT informatique à 
 					<a href="http://www.iut-fbleau.fr/" target="_blank">l'IUT de Fontainebleau.</a>
 				<br><br>
 					
@@ -65,14 +65,14 @@
 					Ce site est un (micro) projet pour le module 1.1 de la matière WIM (Web Internet Mobilité). C'est un site personnel à visée professionnelle.
 				</p>	
 				<p>
-					<br>Vous pouvez  trouvez dans l'onglet "Professionnel" les différents projets que j'ai réalisé lors de mes études
+					<br>Vous pouvez  trouver dans l'onglet "Professionnel" les différents projets que j'ai réalisées lors de mes études
 					ainsi que mon CV.
 				</p>
 				<p>
 					Dans l'onglet me contacter, il y a un formulaire de contact.
 				</p>
 				<p>
-				Vous pouvez  trouvez dans l'onglet centres d'intérêt une presentation de mes centres d'intérêt ainsi qu'une galerie d'image imposée pour ce projet.
+				Vous pouvez  trouver dans l'onglet centres d'intérêt une présentation de mes centres d'intérêt ainsi qu'une galerie d'image imposée pour ce projet.
 				</p>
 			</div>
 		</div>
