--- a/Projet/pages/diapo.html
+++ b/Projet/pages/diapo.html
@@ -52,7 +52,7 @@
 				dans le but de pouvoir amplifier le son ou l’enregistrer.
 			</p>
 			<p> 
-				Cette guitare me permet de jouer de tous les genres musicales.
+				Cette guitare me permet de jouer de tous les genres musicaux.
 				J'ai tout de même une préférence pour le blues et la pop.
 			</p>
 			<p>
@@ -64,16 +64,16 @@
 				Un domaine pour lequel je m'intéresse depuis peu est l'architecture.
 			</p>
 			<p>
-				J'aime beaucoup admiré les styles architecturaux des villes que je visite ou des bâtiments que je croise.
+				J'aime beaucoup admirer les styles architecturaux des villes que je visite ou des bâtiments que je croise.
 				Je trouve que c'est un moyen d'expression très intéressant.
 				Pouvoir construire une ambiance, faire passer un message à travers des formes, des textures, des ombres et des couleurs.
 			</p>
 			<p> 
-				Pendant un voyage scolaire en Espagne en classe de troisième j'ai pu admiré des villages et des monuments avec une architecture particulière.
-				Nous sommmes allées à Malaga en Andalousie.
+				Pendant un voyage scolaire en Espagne en classe de troisième j'ai pu admirer des villages et des monuments avec une architecture particulière.
+				Nous sommes allées à Malaga en Andalousie.
 			</p>
 			<p>
-				La village qui m'a particulièrement marqué est la village de Frigiliana avec ces maisons toutes blanches.
+				Le village qui m'a particulièrement marqué est le village de Frigiliana avec ces maisons toutes blanches.
 				Le palais d'Alhambra à Grenade m'a aussi beaucoup marqué par son architecture hérité de l'architecture musulmane, l'architecture mudéjare.	
 			</p>
 			
