--- a/Projet/index.html
+++ b/Projet/index.html
@@ -65,6 +65,9 @@
 					Ce site est un (micro) projet pour le module 1.1 de la matière WIM (Web Internet Mobilité). C'est un site personnel à visée professionnelle.
 				</p>	
 				<p>
+					Ce site est codé uniquement en <b>HTML</b> et <b>CSS</b>.
+				</p>
+				<p>
 					<br>Vous pouvez  trouver dans l'onglet "Professionnel" les différents projets que j'ai réalisées lors de mes études
 					ainsi que mon CV.
 				</p>
