--- a/Projet/pages/cv.html
+++ b/Projet/pages/cv.html
@@ -127,8 +127,8 @@
 					<br>
 					<h2>Expérience</h2>
 						<div class="cote">  <!-- sur le cote gauche -->
-							<br><p>2009</p>
-								<p>(une semaine)</p>
+							<br><p>avril-juin 2018</p>
+								<p>(13 semaines)</p>
 						</div>
 						<div class="droite">  <!-- sur le cote droit --> 
 						<br><p>Stage dans le cadre du DUT Informatique</p>
