--- a/Projet/pages/projet.html
+++ b/Projet/pages/projet.html
@@ -60,7 +60,7 @@
 					<p>Le principe du jeu <i>Snake </i> est de faire grandir le plus possible le serpent en le dirigeant vers des "fruits" ou autre.</p>
 				<br><p>Voici une image de notre jeu en pleine partie :</p>
 				<br>
-				<img src="../img/snake.jpg" alt="image du jeu snake">
+				<img src="../img/snake.JPG" alt="image du jeu snake">
 				<br>
 				<br><p>Vous pouvez trouver <a href="../pdf/dossierisn.pdf" target="_blank"> dans ce fichier pdf (cliquez)</a> le dossier que j'ai réalisé pour ce projet.</p> <!-- ouvre dans un nouvel onglet -->
 					<p><a href="https://github.com/MelissaDaCosta/Snake-en-Python" target="_blank">Ici vous avez accès au code source du projet.</a></p>
